# nginx-amplify-agent

./: .gitignore  CLAUDE.md  prepare.sh  pyproject.toml
.circleci/: config.yml
.github/: FUNDING.yml
.github/workflows/: integration-test.yml  test.yml
amplify/agent/: main.py
amplify/agent/collectors/nginx/: metrics.py
amplify/agent/common/: context.py  runner.py
amplify/agent/common/util/: backoff.py  logger.py
amplify/agent/managers/: abstract.py  bridge.py
amplify/agent/pipelines/: file.py  syslog.py
amplify/ext/varnish/: __init__.py  managers.py  objects.py  util.py
amplify/ext/varnish/collectors/: __init__.py  meta.py  metrics.py
etc/: agent.conf.default
tests/: __init__.py  test_backoff.py  test_bridge_collapse_backlog.py  test_file_pipeline.py  test_imports.py  test_logger.py  test_main_exit_nonzero.py  test_nginx_workers_io.py  test_runner_reinit.py  test_syslog.py
