[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nginx-amplify-agent"
dynamic = ["version"]
description = "GetPageSpeed Amplify Agent"
readme = "README.md"
license = {text = "BSD-2-Clause"}
requires-python = ">=3.8"
authors = [
    {name = "GetPageSpeed", email = "info@getpagespeed.com"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "gevent>=21.0.0",
    "greenlet>=1.0.0",
    "netaddr>=0.8.0",
    "requests>=2.20.0",
    "psutil>=5.0.0",
    "netifaces>=0.10.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py38"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "UP",   # pyupgrade - catches deprecated stdlib usage
]
ignore = [
    "E501",  # line too long (handled by formatter)
]
